--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -1,5 +1,5 @@
 .login__bg {
-    background-image: url(https://images.unsplash.com/photo-1577563908411-5077b6dc7624?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80);
+    background-image: url(https://herobot.app/wp-content/uploads/2022/11/11-Reasons-Why-A-Chat-Application-Is-Great-For-Business_1.jpg);
     height: 92vh;
     background-position: center;
     background-size: cover;
