--- a/src/pages/Signup.css
+++ b/src/pages/Signup.css
@@ -1,5 +1,5 @@
 .signup__bg {
-    background-image: url(https://images.unsplash.com/photo-1622556498246-755f44ca76f3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzJ8fG1lc3NhZ2UlMjBhcHB8ZW58MHx8MHx8&auto=format&fit=crop&w=800&q=60);
+    background-image: url(https://img.freepik.com/premium-vector/human-hand-holding-mobile-phone-with-text-messages_156780-46.jpg);
     height: 92vh;
     background-position: center;
     background-size: cover;
